[package]
name = "soundprog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
static_assertions = "1.1.0"
derive_builder = "0.11.2"
rand = "0.8.5"
num-traits = "0.2.15"
clap = { version = "4.5.16", features = ["derive"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
